--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@types/nodemailer": "^6.4.14",
+    "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
+    "mongoose": "^7.6.3",
+    "next": "13.5.4",
+    "nodemailer": "^6.9.7",
+    "puppeteer": "^21.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-responsive-carousel": "^3.2.23",
+    "supports-color": "^8.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
